--- a/src/jupiter/STD.ipynb
+++ b/src/jupiter/STD.ipynb
@@ -784,12 +784,12 @@
     "                        td_clampsmin = pd.concat([td_clampsmin, clampsmin])\n",
     "                if maxvalue > ul:\n",
     "                    outmax = uty.find_value(maxvalue, \"max\")\n",
-    "                    clampsmax = td.query(\" Value >= @outmax\")\n",
-    "                    clampsmax = clampsmax.assign(outmax=outmax)\n",
-    "                    td = td.query(\"Value <= @outmax\")\n",
-    "                    # print(td)\n",
-    "                    td_clampsmax = pd.concat([td_clampsmax, clampsmax])\n",
-    "                else:\n",
+    "                #     clampsmax = td.query(\" Value >= @outmax\")\n",
+    "                #     clampsmax = clampsmax.assign(outmax=outmax)\n",
+    "                #     td = td.query(\"Value <= @outmax\")\n",
+    "                #     # print(td)\n",
+    "                #     td_clampsmax = pd.concat([td_clampsmax, clampsmax])\n",
+    "                # else:\n",
     "                    clampsmax = td.query(\" Value >= @outmax\")\n",
     "                    if (\n",
     "                        len(\n",
@@ -809,7 +809,7 @@
     "                        .drop_duplicates()\n",
     "                        .sort_values(ascending=False)\n",
     "                        .iloc[1]\n",
-    "                        * 10\n",
+    "                        * 1.5\n",
     "                    ):\n",
     "                        clampsmax = clampsmax.assign(outmax=outmax)\n",
     "                        td = td.query(\"Value <= @outmax\")\n",
@@ -817,11 +817,11 @@
     "                        td_clampsmax = pd.concat([td_clampsmax, clampsmax])\n",
     "        elif Q1 != 0 and Q3 != 0 and \":TrimValue\" not in tname: \n",
     "            # print(Q1)\n",
-    "            print(Q3)\n",
+    "            # print(Q3)\n",
     "            Q1 = td[\"Value\"].quantile(0.01)\n",
     "            Q3 = td[\"Value\"].quantile(0.99)\n",
     "            # print(Q1)\n",
-    "            print(Q3)\n",
+    "            # print(Q3)\n",
     "            if minvalue < Q1 or maxvalue > Q3:\n",
     "                if minvalue < Q1:\n",
     "                    outmin = uty.find_value(minvalue, \"min\")\n",
@@ -843,8 +843,8 @@
     "                        td_clampsmin = pd.concat([td_clampsmin, clampsmin])\n",
     "                if maxvalue > Q3:\n",
     "                    outmax = uty.find_value(maxvalue, \"max\")\n",
-    "                    print(\"maxvalue\",maxvalue)\n",
-    "                    print(\"outmax\",outmax)\n",
+    "                    # print(\"maxvalue\",maxvalue)\n",
+    "                    # print(\"outmax\",outmax)\n",
     "                #     clampsmax = td.query(\" Value >= @outmax\")\n",
     "                #     clampsmax = clampsmax.assign(outmax=outmax)\n",
     "                #     td = td.query(\"Value <= @outmax\")\n",
