--- a/src/jupiter/X30.ipynb
+++ b/src/jupiter/X30.ipynb
@@ -723,57 +723,56 @@
     "        Q3 = td[\"Value\"].quantile(0.75)\n",
     "        IQR = Q3 - Q1\n",
     "\n",
+    "        flag = 0\n",
     "        # Applying the filter to clamps\n",
-    "        if ul != 0 and ll != 0 and ul != ll:\n",
-    "            if minvalue < ll or maxvalue > ul:\n",
-    "                if minvalue < ll:\n",
+    "        if ul != 0 and ll != 0:\n",
+    "            maxmax = ul \n",
+    "            minmin = ll \n",
+    "        elif \":TrimValue\" not in tname: \n",
+    "            minmin = td[\"Value\"].quantile(0.01)\n",
+    "            maxmax = td[\"Value\"].quantile(0.99)\n",
+    "        else:\n",
+    "            flag = 1\n",
+    "            \n",
+    "        if flag == 1 :\n",
+    "            pass\n",
+    "        elif minvalue < minmin or maxvalue > maxmax :\n",
+    "            if minvalue < minmin:\n",
     "                    outmin = uty.find_value(minvalue, \"min\")\n",
-    "                    if (\n",
-    "                        len(\n",
-    "                            td[\"Value\"]\n",
-    "                            .drop_duplicates()\n",
-    "                            .sort_values(ascending=True)\n",
-    "                        )\n",
-    "                        > 1\n",
-    "                    ) and (\n",
-    "                        td[\"Value\"]\n",
-    "                        .drop_duplicates()\n",
-    "                        .sort_values(ascending=True)\n",
-    "                        .iloc[1]\n",
-    "                        - clampsmin[\"Value\"].min()\n",
-    "                    ) > (\n",
-    "                        clampsmin[\"Value\"].min() * 10\n",
-    "                    ):\n",
+    "                    clampsmin = td.query(\"Value <= @outmin\")\n",
+    "                    tdminlen = len(td[\"Value\"].drop_duplicates().sort_values(ascending=True))\n",
+    "                    minclampmin = clampsmin[\"Value\"].min()\n",
+    "                    tdmin = td[\"Value\"].drop_duplicates().sort_values(ascending=False).iloc[1]\n",
+    "                    diffmin = tdmin - minclampmin * 1.1\n",
+    "                    \n",
+    "                    if tdminlen > 1 and diffmin > 1 : \n",
     "                        clampsmin = clampsmin.assign(outmin=outmin)\n",
     "                        td = td.query(\"@outmin <= Value \")\n",
     "                        td_clampsmin = pd.concat([td_clampsmin, clampsmin])\n",
-    "                if maxvalue > ul:\n",
+    "                        \n",
+    "                        del tdminlen\n",
+    "                        del minclampmin\n",
+    "                        del tdmin\n",
+    "                        del diffmin\n",
+    "                    \n",
+    "            if maxvalue > ul:\n",
     "                    outmax = uty.find_value(maxvalue, \"max\")\n",
     "                    clampsmax = td.query(\" Value >= @outmax\")\n",
-    "                    if (\n",
-    "                        len(\n",
-    "                            td[\"Value\"]\n",
-    "                            .drop_duplicates()\n",
-    "                            .sort_values(ascending=False)\n",
-    "                        )\n",
-    "                        > 1\n",
-    "                    ) and (\n",
-    "                        clampsmax[\"Value\"].max()\n",
-    "                        - td[\"Value\"]\n",
-    "                        .drop_duplicates()\n",
-    "                        .sort_values(ascending=False)\n",
-    "                        .iloc[1]\n",
-    "                    ) > (\n",
-    "                        td[\"Value\"]\n",
-    "                        .drop_duplicates()\n",
-    "                        .sort_values(ascending=False)\n",
-    "                        .iloc[1]\n",
-    "                        * 10\n",
-    "                    ):\n",
+    "                    tdmaxlen = len(td[\"Value\"].drop_duplicates().sort_values(ascending=False))\n",
+    "                    maxclampmax = clampsmax[\"Value\"].max()\n",
+    "                    tdmax = td[\"Value\"].drop_duplicates().sort_values(ascending=False).iloc[1]\n",
+    "                    diffmax = maxclampmax - tdmax * 1.1\n",
+    "                    \n",
+    "                    if tdmaxlen > 1 and diffmax > 1 : \n",
     "                        clampsmax = clampsmax.assign(outmax=outmax)\n",
     "                        td = td.query(\"Value <= @outmax\")\n",
-    "                        # print(td)\n",
     "                        td_clampsmax = pd.concat([td_clampsmax, clampsmax])\n",
+    "                        \n",
+    "                        del tdmaxlen\n",
+    "                        del maxclampmax\n",
+    "                        del tdmax\n",
+    "                        del diffmax\n",
+    "            del flag\n",
     "        td_filtered = pd.concat([td_filtered, td])\n",
     "        td = td_filtered\n",
     "\n",
@@ -1084,12 +1083,23 @@
     "                ]\n",
     "            ]\n",
     "            .fillna(\"-\")\n",
-    "            .replace({np.nan: \"-\", \" \": \"-\", \"nan\": \"-\", \"NAN\": \"-\", \"NaN\": \"-\", \"Nan\": \"-\"})\n",
+    "            .replace(\n",
+    "                {\n",
+    "                    np.nan: \"-\",\n",
+    "                    \" \": \"-\",\n",
+    "                    \"\": \"-\",\n",
+    "                    \"nan\": \"-\",\n",
+    "                    \"NAN\": \"-\",\n",
+    "                    \"NaN\": \"-\",\n",
+    "                    \"Nan\": \"-\",\n",
+    "                }\n",
+    "            )        \n",
     "        )\n",
     "        \n",
     "        for col in [\"Clamps min\", \"Clamps min Val\", \"Clamps max\", \"Clamps max Val\"]:\n",
-    "            if (pv[col] == \"-\").all():\n",
+    "            if (pv[col] == 0).all():\n",
     "                pv.drop(columns=[col], inplace=True)\n",
+    "                \n",
     "        pv_dict[tname] = pv\n",
     "        \n",
     "        def custom_format(x):\n",
@@ -1150,7 +1160,7 @@
     "    uty.write_log(\"Start FTR data analysis\")\n",
     "    \n",
     "    # DataFrame per memorizzare i risultati aggregati\n",
-    "    results_df = pd.DataFrame(columns=[\"TestName\", \"PASS\", \"FAIL\", \"PERCENT_PASS\"])\n",
+    "    results_df = pd.DataFrame(columns=[\"TestName\", \"Pass\", \"Fail\", \"Yield\"])\n",
     "    \n",
     "    for tname in ftrtname:\n",
     "        uty.write_log(tname)\n",
@@ -1308,8 +1318,8 @@
     "            fig.show() \n",
     "\n",
     "            pv = td.groupby([\"°C\", \"Corner\", \"Volt\"], as_index=False).agg(\n",
-    "                PASS=(\"RESULT\", lambda x: (x == 1).sum()),\n",
-    "                FAIL=(\"RESULT\", lambda x: (x == 0).sum()),\n",
+    "                Pass=(\"RESULT\", lambda x: (x == 1).sum()),\n",
+    "                Fail=(\"RESULT\", lambda x: (x == 0).sum()),\n",
     "                Gross=(\"RESULT\", \"size\"),\n",
     "                Yield=(\"RESULT\", lambda x: f\"{round((x == 1).sum() / len(x) * 100, 2)} %\"),\n",
     "            )\n",
@@ -1317,7 +1327,7 @@
     "            pv = pd.melt(\n",
     "                pv,\n",
     "                id_vars=[\"°C\", \"Corner\", \"Volt\"],\n",
-    "                value_vars=[\"PASS\", \"FAIL\", \"Gross\", \"Yield\"],\n",
+    "                value_vars=[\"Pass\", \"Fail\", \"Gross\", \"Yield\"],\n",
     "                var_name=\"Metric\",\n",
     "                value_name=\"Value\",\n",
     "            )\n",
@@ -1326,8 +1336,8 @@
     "            ).reset_index()\n",
     "            pv[\"Code\"] = pv[\"Metric\"].apply(\n",
     "                lambda x: 1\n",
-    "                if x == \"PASS\"\n",
-    "                else (2 if x == \"FAIL\" else (3 if x == \"Gross\" else 4))\n",
+    "                if x == \"Pass\"\n",
+    "                else (2 if x == \"Fail\" else (3 if x == \"Gross\" else 4))\n",
     "            )\n",
     "            pv = (\n",
     "                pv.sort_values(by=[\"°C\", \"Corner\", \"Code\"], ascending=[True, True, True])\n",
@@ -1344,9 +1354,9 @@
     "        \n",
     "        new_row = pd.DataFrame({\n",
     "            \"TestName\": [tname],\n",
-    "            \"PASS\": [pass_count],\n",
-    "            \"FAIL\": [fail_count],\n",
-    "            \"PERCENT_PASS\": [round(percent_pass, 2)]\n",
+    "            \"Pass\": [pass_count],\n",
+    "            \"Fail\": [fail_count],\n",
+    "            \"Yield\": [round(percent_pass, 2)]\n",
     "        })\n",
     "        \n",
     "        results_df = results_df.dropna(axis=1, how='all')\n",
@@ -1367,23 +1377,37 @@
     "pass_tests_results_df, fail_tests_results_df = [], []\n",
     "fail_count = 0\n",
     "\n",
+    "# Filter columns in statistics\n",
+    "statistics = statistics[[\n",
+    "    \"TestName\",\n",
+    "    \"Tested Part\",\n",
+    "    \"Low Limit\",\n",
+    "    \"Min\",\n",
+    "    \"Mean\",\n",
+    "    \"Max\",\n",
+    "    \"High Limit\",\n",
+    "    \"Std\",\n",
+    "    \"Unit\",\n",
+    "    \"Cp\",\n",
+    "    \"CpK\",\n",
+    "    \"Kurtosis\",\n",
+    "    \"Fail Duts\",\n",
+    "    \"Yield\",\n",
+    "]]\n",
+    "\n",
     "# Check Cp value in statistics\n",
     "for _, row in statistics.iterrows():\n",
     "    tname, cp = row[\"TestName\"], row[\"Cp\"]\n",
     "    (fail_tests if cp != \"-\" and cp < 10 else pass_tests).append(row)\n",
     "\n",
-    "# Check tests in results_df\n",
-    "for _, row in results_df.iterrows():\n",
-    "    tname, fail_count, pass_count, percent_pass = (\n",
-    "        row[\"TestName\"],\n",
-    "        row[\"FAIL\"],\n",
-    "        row[\"PASS\"],\n",
-    "        row[\"PERCENT_PASS\"],\n",
-    "    )\n",
-    "    (fail_tests_results_df if fail_count > 1000 else pass_tests_results_df).append(row)\n",
-    "\n",
     "# Apply the color function to the Cp column\n",
     "styled_statistics = statistics.style.map(uty.color_cp, subset=[\"Cp\"])\n",
+    "\n",
+    "# Check tests in results_df\n",
+    "for _, row in results_df.iterrows():\n",
+    "    percent_pass_value = float(row[\"Yield\"].strip('%'))\n",
+    "    # print(percent_pass_value)\n",
+    "    (fail_tests_results_df if percent_pass_value < 100 else pass_tests_results_df).append(row)\n",
     "\n",
     "# Determine the overall conclusion\n",
     "all_tests_within_spec = not fail_tests and not fail_tests_results_df\n",
@@ -1391,7 +1415,7 @@
     "conclusion_html += \"<h3>{}</h3>\".format(\n",
     "    \"All tests are within specifications.\"\n",
     "    if all_tests_within_spec\n",
-    "    else f\"{len(fail_tests) + fail_count} out of {statistics.shape[0] + results_df.shape[0]} tests are not within specifications.\"\n",
+    "    else f\"{len(fail_tests) + len(fail_tests_results_df)} out of {statistics.shape[0] + results_df.shape[0]} tests are not within specifications.\"\n",
     ")\n",
     "\n",
     "# Tests that fail\n",
@@ -1410,7 +1434,7 @@
     "        )\n",
     "    if fail_tests_results_df:\n",
     "        conclusion_html += \"<h3>Functional Tests results</h3>\"\n",
-    "        conclusion_html += results_df[results_df[\"FAIL\"] > 1000].to_html(index=False)\n",
+    "        conclusion_html += results_df[results_df[\"Yield\"].apply(lambda x: float(x.strip('%')) < 100)].to_html(index=False)\n",
     "\n",
     "# Tests that pass\n",
     "conclusion_html += \"<h2>Pass Tests:</h2>\"\n",
@@ -1421,7 +1445,7 @@
     "    ].to_html(index=False, escape=False)\n",
     "if pass_tests_results_df:\n",
     "    conclusion_html += \"<h3>Functional Tests results</h3>\"\n",
-    "    conclusion_html += results_df[results_df[\"FAIL\"] <= 1000].to_html(index=False)\n",
+    "    conclusion_html += results_df[results_df[\"Yield\"].apply(lambda x: float(x.strip('%')) >= 100)].to_html(index=False)\n",
     "\n",
     "# Display conclusions\n",
     "display(HTML(conclusion_html))"
