bug fix before path modify

--- a/src/jupiter/CONDITION.ipynb
+++ b/src/jupiter/CONDITION.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "\t\t<td>Revision </td> <td>0.1</td>\n",
        "\t</tr>\n",
        "    <tr>\n",
-       "\t\t<td>Date </td> <td> 17 March 2025 11:14</td>\n",
+       "\t\t<td>Date </td> <td> 21 March 2025 15:11</td>\n",
        "\t</tr>\n",
        "</table>"
       ],
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,118 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "toprint = '<table border= \"1\" align=\"center\" style=\"height: 100%; width: 100%;\"><thead><td>Wafer Corner</td><td>Temperature</td><td>Gross from 30</td><td>Good</td><td>Bad</td></thead>'\n",
+    "groosgood30 = 0\n",
+    "corner = \"\"\n",
+    "p = os.listdir(\"../\")\n",
+    "ptr = pd.DataFrame()\n",
+    "ftr = pd.DataFrame()\n",
+    "population = pd.DataFrame()\n",
+    "ptr_dict = {}\n",
+    "ftr_dict = {}\n",
+    "ptrtname = []\n",
+    "ftrtname = []\n",
+    "uty.write_log(\"Reading START\")\n",
+    "pd.set_option(\"display.width\", None)\n",
+    "\n",
+    "uty.write_log(\"Read STDF table\")\n",
+    "\n",
+    "spec = pd.read_csv(\"../tmp/condition.csv\")\n",
+    "spec = spec.replace([None, np.nan], \"\")\n",
+    "\n",
+    "\n",
+    "def format_specs(spec):\n",
+    "    return spec.replace(\" / \", \"<br>\")\n",
+    "\n",
+    "\n",
+    "spec[\"TIMINGSPECS\"] = spec[\"TIMINGSPECS\"].apply(format_specs)\n",
+    "spec[\"LEVELSPECS\"] = spec[\"LEVELSPECS\"].apply(format_specs)\n",
+    "\n",
+    "with open(\"template.json\", \"r\") as file:\n",
+    "    templates = json.load(file)\n",
+    "\n",
+    "\n",
+    "def apply_template(test_function, templates):\n",
+    "    function_name = test_function.split(\"(\")[0]\n",
+    "    if function_name not in templates:\n",
+    "        if function_name.startswith(\"no_method_found\"):\n",
+    "            return \"no_method_found\"\n",
+    "        return test_function\n",
+    "    test_function = test_function[test_function.find(\"(\") + 1 : -1]\n",
+    "    parts = test_function.split(\";\")\n",
+    "    # print(parts)\n",
+    "    template_body = templates[function_name][\"body\"]\n",
+    "\n",
+    "    if len(parts) > len(template_body):\n",
+    "        return \"\\n\".join(test_function)\n",
+    "\n",
+    "    for i in range(len(template_body)):\n",
+    "        template_body[i] = re.sub(\n",
+    "            r\"\\$\\{\\d+(:[^\\}]*)?\\}\",\n",
+    "            lambda match: parts.pop(0) if parts else \"\",\n",
+    "            template_body[i],\n",
+    "        )\n",
+    "    # print(template_body)\n",
+    "    return \"\\n\".join(template_body)\n",
+    "\n",
+    "\n",
+    "# Applicazione della funzione alla colonna 'TESTFUNCTION'\n",
+    "spec[\"TESTFUNCTION\"] = spec[\"TESTFUNCTION\"].apply(\n",
+    "    lambda x: apply_template(x, templates) if \"(\" in x else x\n",
+    ")\n",
+    "spec[\"TESTFUNCTION\"] = spec[\"TESTFUNCTION\"].str.replace(\"\\n\", \"\")\n",
+    "spec[\"PATTERN\"] = spec[\"PATTERN\"].str.replace(\", \", \",<br>\")\n",
+    "spec[\"TESTNR\"] = spec[\"TESTNR\"].astype(int)\n",
+    "spec[\"HB\"] = spec[\"HB\"].astype(str).replace(\"0\", \"-\")\n",
+    "spec[\"HBNAME\"] = spec[\"HBNAME\"].astype(str).replace(\"\", \"-\")\n",
+    "\n",
+    "\n",
+    "def generate_html_table_from_string(spec_string):\n",
+    "    # Dividi la stringa in base a \"<br>\"\n",
+    "    specs = spec_string.split(\"<br>\")\n",
+    "\n",
+    "    # Inizia a costruire la tabella HTML\n",
+    "    table_html = \" <table>\\n\"\n",
+    "    table_html += \"  <thead>\\n\"\n",
+    "    table_html += \"    <tr>\\n\"\n",
+    "    table_html += \"      <th>Spec</th>\\n\"\n",
+    "    table_html += \"      <th>Value</th>\\n\"\n",
+    "    table_html += \"    </tr>\\n\"\n",
+    "    table_html += \"  </thead>\\n\"\n",
+    "    table_html += \"  <tbody>\\n\"\n",
+    "\n",
+    "    # Itera attraverso ogni specifica e aggiungi una riga alla tabella\n",
+    "    for spec in specs:\n",
+    "        if spec:  # Assicurati che la specifica non sia vuota\n",
+    "            key, value = spec.split(\"=\")\n",
+    "            table_html += \"    <tr>\\n\"\n",
+    "            table_html += f\"      <td>{key}</td>\\n\"\n",
+    "            table_html += f\"      <td>{value}</td>\\n\"\n",
+    "            table_html += \"    </tr>\\n\"\n",
+    "        else:\n",
+    "            return \"\"\n",
+    "\n",
+    "    table_html += \"  </tbody>\\n\"\n",
+    "    table_html += \"</table>\\n\"\n",
+    "\n",
+    "    return table_html\n",
+    "\n",
+    "\n",
+    "# Itera su ogni riga del DataFrame e converte la stringa in una tabella HTML\n",
+    "spec[\"LEVELSPECS\"] = spec[\"LEVELSPECS\"].apply(generate_html_table_from_string)\n",
+    "spec[\"TIMINGSPECS\"] = spec[\"TIMINGSPECS\"].apply(generate_html_table_from_string)\n",
+    "display(Markdown(\"## Test Condition\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -1142,73 +1253,21 @@
        "</div>\n",
        "\n",
        "<script>\n",
-       "    function colorizeContent(content) {\n",
-       "        function colorizePart(part) {\n",
-       "            if (part.includes(\":=\")) {\n",
-       "                const [key, value] = part.split(\":=\");\n",
-       "                return `<span style=\"color: green;\">${key.trim()}</span><span style=\"color: blue;\">:=</span><span style=\"color: red;\">${value.trim()}</span>`;\n",
-       "            } else if (part.endsWith(\",\")) {\n",
-       "                return `<span style=\"color: blue;\">${part.trim()}</span>`;\n",
-       "            } else {\n",
-       "                return `<span style=\"color: green;\">${part.trim()}</span>`;\n",
-       "            }\n",
-       "        }\n",
-       "\n",
-       "        const parts = content.split(/(\\s|$|$)/).filter(Boolean);\n",
-       "        return parts.map(colorizePart).join(\"\");\n",
-       "    }\n",
-       "\n",
-       "    function formatFunctionDetails(details) {\n",
-       "        const [name, params] = details.split(\"(\", 2);\n",
-       "        const paramList = params.slice(0, -1).split(\", \");\n",
-       "        const formattedParams = paramList.map(param => colorizePart(param)).join(\",\n",
-       "\");\n",
-       "        return `<span style=\"color: green;\">${name.trim()}</span>(\n",
-       "${formattedParams}\n",
-       ")`;\n",
-       "    }\n",
        "\n",
        "    function show_overlay(event, title, content, isCodeBlock = false) {\n",
        "        document.getElementById('overlay_title').innerText = title;\n",
-       "        var overlayContent = document.getElementById('overlay_content');\n",
-       "        \n",
+       "        const codeBlock = document.getElementById('code_block');\n",
        "        if (isCodeBlock) {\n",
-       "            content = formatFunctionDetails(content);\n",
-       "            overlayContent.classList.add('code-block');\n",
+       "            codeBlock.innerHTML =content;\n",
        "        } else {\n",
-       "            overlayContent.classList.remove('code-block');\n",
+       "            codeBlock.innerHTML = content;\n",
        "        }\n",
-       "\n",
-       "        overlayContent.innerHTML = content;\n",
-       "\n",
-       "        var overlay = document.getElementById('generic_overlay');\n",
-       "        var cell = event.target;\n",
-       "        var rect = cell.getBoundingClientRect();\n",
-       "        \n",
-       "        overlay.style.display = 'block';\n",
-       "        overlay.style.top = (rect.top + window.scrollY + cell.offsetHeight - overlay.clientHeight) + 'px';\n",
-       "        \n",
-       "        if (isCodeBlock) {\n",
-       "            overlay.style.left = (rect.right + window.scrollX - cell.offsetWidth - overlay.clientWidth) + 'px';\n",
-       "        } else {\n",
-       "            overlay.style.left = (rect.left - window.scrollX + cell.offsetWidth) + 'px';\n",
-       "        }\n",
-       "        overlay.style.display = 'block';\n",
+       "        document.getElementById('generic_overlay').style.display = \"block\";\n",
        "    }\n",
        "\n",
        "    function hide_overlay() {\n",
-       "        document.getElementById('generic_overlay').style.display = 'none';\n",
+       "        document.getElementById('generic_overlay').style.display = \"none\";\n",
        "    }\n",
-       "\n",
-       "    // Associa le funzioni agli elementi globali per poterle chiamare dall'HTML\n",
-       "    window.show_overlay = show_overlay;\n",
-       "    window.hide_overlay = hide_overlay;\n",
-       "\n",
-       "    // Esempio di utilizzo\n",
-       "    const exampleContent = \"imeas ( pingroup:= pb8, force_voltage:= 0.5, limit_min:= -25e-6, limit_max:= 25e-6, delay:= 1, store_var:= , openpins:= pa4 pa5 pa6 )\";\n",
-       "    document.addEventListener('DOMContentLoaded', () => {\n",
-       "        show_overlay({ target: document.body }, 'Example Function', exampleContent, true);\n",
-       "    });\n",
        "</script>\n",
        "\n",
        "<div style=\"height: 100px;\"></div>\n"
@@ -1234,107 +1293,7 @@
     }
    ],
    "source": [
-    "toprint = '<table border= \"1\" align=\"center\" style=\"height: 100%; width: 100%;\"><thead><td>Wafer Corner</td><td>Temperature</td><td>Gross from 30</td><td>Good</td><td>Bad</td></thead>'\n",
-    "groosgood30 = 0\n",
-    "corner = \"\"\n",
-    "p = os.listdir(\"../\")\n",
-    "ptr = pd.DataFrame()\n",
-    "ftr = pd.DataFrame()\n",
-    "population = pd.DataFrame()\n",
-    "ptr_dict = {}\n",
-    "ftr_dict = {}\n",
-    "ptrtname = []\n",
-    "ftrtname = []\n",
-    "uty.write_log(\"Reading START\")\n",
-    "pd.set_option(\"display.width\", None)\n",
     "\n",
-    "uty.write_log(\"Read STDF table\")\n",
-    "\n",
-    "spec = pd.read_csv(\"../tmp/condition.csv\")\n",
-    "spec = spec.replace([None, np.nan], \"\")\n",
-    "\n",
-    "\n",
-    "def format_specs(spec):\n",
-    "    return spec.replace(\" / \", \"<br>\")\n",
-    "\n",
-    "\n",
-    "spec[\"TIMINGSPECS\"] = spec[\"TIMINGSPECS\"].apply(format_specs)\n",
-    "spec[\"LEVELSPECS\"] = spec[\"LEVELSPECS\"].apply(format_specs)\n",
-    "\n",
-    "with open(\"template.json\", \"r\") as file:\n",
-    "    templates = json.load(file)\n",
-    "\n",
-    "\n",
-    "def apply_template(test_function, templates):\n",
-    "    function_name = test_function.split(\"(\")[0]\n",
-    "    if function_name not in templates:\n",
-    "        if function_name.startswith(\"no_method_found\"):\n",
-    "            return \"no_method_found\"\n",
-    "        return test_function\n",
-    "    test_function = test_function[test_function.find(\"(\") + 1 : -1]\n",
-    "    parts = test_function.split(\";\")\n",
-    "    # print(parts)\n",
-    "    template_body = templates[function_name][\"body\"]\n",
-    "\n",
-    "    if len(parts) > len(template_body):\n",
-    "        return \"\\n\".join(test_function)\n",
-    "\n",
-    "    for i in range(len(template_body)):\n",
-    "        template_body[i] = re.sub(\n",
-    "            r\"\\$\\{\\d+(:[^\\}]*)?\\}\",\n",
-    "            lambda match: parts.pop(0) if parts else \"\",\n",
-    "            template_body[i],\n",
-    "        )\n",
-    "    # print(template_body)\n",
-    "    return \"\\n\".join(template_body)\n",
-    "\n",
-    "\n",
-    "# Applicazione della funzione alla colonna 'TESTFUNCTION'\n",
-    "spec[\"TESTFUNCTION\"] = spec[\"TESTFUNCTION\"].apply(\n",
-    "    lambda x: apply_template(x, templates) if \"(\" in x else x\n",
-    ")\n",
-    "spec[\"TESTFUNCTION\"] = spec[\"TESTFUNCTION\"].str.replace(\"\\n\", \"\")\n",
-    "spec[\"PATTERN\"] = spec[\"PATTERN\"].str.replace(\", \", \",<br>\")\n",
-    "spec[\"TESTNR\"] = spec[\"TESTNR\"].astype(int)\n",
-    "spec[\"HB\"] = spec[\"HB\"].astype(str).replace(\"0\", \"-\")\n",
-    "spec[\"HBNAME\"] = spec[\"HBNAME\"].astype(str).replace(\"\", \"-\")\n",
-    "\n",
-    "\n",
-    "def generate_html_table_from_string(spec_string):\n",
-    "    # Dividi la stringa in base a \"<br>\"\n",
-    "    specs = spec_string.split(\"<br>\")\n",
-    "\n",
-    "    # Inizia a costruire la tabella HTML\n",
-    "    table_html = \" <table>\\n\"\n",
-    "    table_html += \"  <thead>\\n\"\n",
-    "    table_html += \"    <tr>\\n\"\n",
-    "    table_html += \"      <th>Spec</th>\\n\"\n",
-    "    table_html += \"      <th>Value</th>\\n\"\n",
-    "    table_html += \"    </tr>\\n\"\n",
-    "    table_html += \"  </thead>\\n\"\n",
-    "    table_html += \"  <tbody>\\n\"\n",
-    "\n",
-    "    # Itera attraverso ogni specifica e aggiungi una riga alla tabella\n",
-    "    for spec in specs:\n",
-    "        if spec:  # Assicurati che la specifica non sia vuota\n",
-    "            key, value = spec.split(\"=\")\n",
-    "            table_html += \"    <tr>\\n\"\n",
-    "            table_html += f\"      <td>{key}</td>\\n\"\n",
-    "            table_html += f\"      <td>{value}</td>\\n\"\n",
-    "            table_html += \"    </tr>\\n\"\n",
-    "        else:\n",
-    "            return \"\"\n",
-    "\n",
-    "    table_html += \"  </tbody>\\n\"\n",
-    "    table_html += \"</table>\\n\"\n",
-    "\n",
-    "    return table_html\n",
-    "\n",
-    "\n",
-    "# Itera su ogni riga del DataFrame e converte la stringa in una tabella HTML\n",
-    "spec[\"LEVELSPECS\"] = spec[\"LEVELSPECS\"].apply(generate_html_table_from_string)\n",
-    "spec[\"TIMINGSPECS\"] = spec[\"TIMINGSPECS\"].apply(generate_html_table_from_string)\n",
-    "display(Markdown(\"## Test Condition\"))\n",
     "html = \"\"\"\n",
     "<style>\n",
     ".overlay {\n",
@@ -1442,70 +1401,21 @@
     "</div>\n",
     "\n",
     "<script>\n",
-    "    function colorizeContent(content) {\n",
-    "        function colorizePart(part) {\n",
-    "            if (part.includes(\":=\")) {\n",
-    "                const [key, value] = part.split(\":=\");\n",
-    "                return `<span style=\"color: green;\">${key.trim()}</span><span style=\"color: blue;\">:=</span><span style=\"color: red;\">${value.trim()}</span>`;\n",
-    "            } else if (part.endsWith(\",\")) {\n",
-    "                return `<span style=\"color: blue;\">${part.trim()}</span>`;\n",
-    "            } else {\n",
-    "                return `<span style=\"color: green;\">${part.trim()}</span>`;\n",
-    "            }\n",
-    "        }\n",
-    "\n",
-    "        const parts = content.split(/(\\s|$|$)/).filter(Boolean);\n",
-    "        return parts.map(colorizePart).join(\"\");\n",
-    "    }\n",
-    "\n",
-    "    function formatFunctionDetails(details) {\n",
-    "        const [name, params] = details.split(\"(\", 2);\n",
-    "        const paramList = params.slice(0, -1).split(\", \");\n",
-    "        const formattedParams = paramList.map(param => colorizePart(param)).join(\",\\n\");\n",
-    "        return `<span style=\"color: green;\">${name.trim()}</span>(\\n${formattedParams}\\n)`;\n",
-    "    }\n",
     "\n",
     "    function show_overlay(event, title, content, isCodeBlock = false) {\n",
     "        document.getElementById('overlay_title').innerText = title;\n",
-    "        var overlayContent = document.getElementById('overlay_content');\n",
-    "        \n",
+    "        const codeBlock = document.getElementById('code_block');\n",
     "        if (isCodeBlock) {\n",
-    "            content = formatFunctionDetails(content);\n",
-    "            overlayContent.classList.add('code-block');\n",
+    "            codeBlock.innerHTML =content;\n",
     "        } else {\n",
-    "            overlayContent.classList.remove('code-block');\n",
+    "            codeBlock.innerHTML = content;\n",
     "        }\n",
-    "\n",
-    "        overlayContent.innerHTML = content;\n",
-    "\n",
-    "        var overlay = document.getElementById('generic_overlay');\n",
-    "        var cell = event.target;\n",
-    "        var rect = cell.getBoundingClientRect();\n",
-    "        \n",
-    "        overlay.style.display = 'block';\n",
-    "        overlay.style.top = (rect.top + window.scrollY + cell.offsetHeight - overlay.clientHeight) + 'px';\n",
-    "        \n",
-    "        if (isCodeBlock) {\n",
-    "            overlay.style.left = (rect.right + window.scrollX - cell.offsetWidth - overlay.clientWidth) + 'px';\n",
-    "        } else {\n",
-    "            overlay.style.left = (rect.left - window.scrollX + cell.offsetWidth) + 'px';\n",
-    "        }\n",
-    "        overlay.style.display = 'block';\n",
+    "        document.getElementById('generic_overlay').style.display = \"block\";\n",
     "    }\n",
     "\n",
     "    function hide_overlay() {\n",
-    "        document.getElementById('generic_overlay').style.display = 'none';\n",
+    "        document.getElementById('generic_overlay').style.display = \"none\";\n",
     "    }\n",
-    "\n",
-    "    // Associa le funzioni agli elementi globali per poterle chiamare dall'HTML\n",
-    "    window.show_overlay = show_overlay;\n",
-    "    window.hide_overlay = hide_overlay;\n",
-    "\n",
-    "    // Esempio di utilizzo\n",
-    "    const exampleContent = \"imeas ( pingroup:= pb8, force_voltage:= 0.5, limit_min:= -25e-6, limit_max:= 25e-6, delay:= 1, store_var:= , openpins:= pa4 pa5 pa6 )\";\n",
-    "    document.addEventListener('DOMContentLoaded', () => {\n",
-    "        show_overlay({ target: document.body }, 'Example Function', exampleContent, true);\n",
-    "    });\n",
     "</script>\n",
     "\n",
     "<div style=\"height: 100px;\"></div>\n",
